[gd_scene load_steps=19 format=3 uid="uid://y4th65ssfqyb"]

[ext_resource type="Script" path="res://scripts/cart.gd" id="1_ca45l"]
[ext_resource type="Shader" path="res://shaders/cart.gdshader" id="2_2ic2e"]
[ext_resource type="Texture2D" uid="uid://co0iauuurh65r" path="res://assets/telega_ltop_down.png" id="2_q1bs4"]
[ext_resource type="Texture2D" uid="uid://tn2rm06ixnvb" path="res://assets/telega_left_right.png" id="3_ut43m"]
[ext_resource type="Texture2D" uid="uid://dyq0aob67ec2c" path="res://assets/flame_particle.png" id="4_kv745"]
[ext_resource type="Texture2D" uid="uid://m8gxf3k2rh3d" path="res://assets/shadow.png" id="6_qxjyu"]
[ext_resource type="AudioStream" uid="uid://4whf5uxadloi" path="res://assets/audio/Trap_00.wav" id="7_jnol7"]
[ext_resource type="AudioStream" uid="uid://coo7thwvfw451" path="res://assets/audio/damage.mp3" id="8_sogw4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3a0fb"]
shader = ExtResource("2_2ic2e")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v6mis"]
shader = ExtResource("2_2ic2e")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qubtq"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_bk7ju"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_x683e"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5407p"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b2uhi"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7rmn3"]
radius = 8.0

[sub_resource type="Gradient" id="Gradient_0mclc"]
offsets = PackedFloat32Array(0, 0.75)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xqbj0"]
gradient = SubResource("Gradient_0mclc")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="cart" type="StaticBody2D"]
z_index = 1
script = ExtResource("1_ca45l")

[node name="top_down" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3a0fb")
texture = ExtResource("2_q1bs4")

[node name="left_right" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_v6mis")
texture = ExtResource("3_ut43m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qubtq")

[node name="top_area" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_area"]
shape = SubResource("CircleShape2D_bk7ju")
debug_color = Color(0.427088, 0.459018, 1, 0.42)

[node name="down_area" type="Area2D" parent="."]
position = Vector2(0, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="down_area"]
shape = SubResource("CircleShape2D_x683e")
debug_color = Color(0.427088, 0.459018, 1, 0.42)

[node name="left_area" type="Area2D" parent="."]
position = Vector2(-16, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_area"]
shape = SubResource("CircleShape2D_5407p")
debug_color = Color(0.427088, 0.459018, 1, 0.42)

[node name="right_area" type="Area2D" parent="."]
position = Vector2(16, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_area"]
shape = SubResource("CircleShape2D_b2uhi")
debug_color = Color(0.427088, 0.459018, 1, 0.42)

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="cart_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cart_area"]
shape = SubResource("CircleShape2D_7rmn3")
debug_color = Color(0.97179, 0, 0.445535, 0.42)

[node name="left_particle" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.458824)
position = Vector2(-16, 0)
amount = 5
lifetime = 1.5
speed_scale = 0.5
lifetime_randomness = 0.4
texture = ExtResource("4_kv745")
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2(0, -10)
scale_amount_min = 0.0
scale_amount_max = 0.1

[node name="right_particle" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.458824)
position = Vector2(16, 0)
amount = 5
lifetime = 1.5
speed_scale = 0.5
lifetime_randomness = 0.4
texture = ExtResource("4_kv745")
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2(0, -10)
scale_amount_min = 0.0
scale_amount_max = 0.1

[node name="top_particle" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.458824)
position = Vector2(0, -16)
amount = 5
lifetime = 1.5
speed_scale = 0.5
lifetime_randomness = 0.4
texture = ExtResource("4_kv745")
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2(0, -10)
scale_amount_min = 0.0
scale_amount_max = 0.1

[node name="down_particle" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.458824)
position = Vector2(0, 16)
amount = 5
lifetime = 0.5
speed_scale = 0.5
lifetime_randomness = 0.4
texture = ExtResource("4_kv745")
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2(0, -10)
scale_amount_min = 0.0
scale_amount_max = 0.1

[node name="left_right_shadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.45098)
z_index = -1
position = Vector2(0, 8)
scale = Vector2(1, 0.319999)
texture = ExtResource("6_qxjyu")

[node name="top_down_shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.45098)
z_index = -1
rotation = 1.5708
scale = Vector2(1, 0.84)
texture = ExtResource("6_qxjyu")

[node name="cart_stop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jnol7")
volume_db = -7.0

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_sogw4")
volume_db = -5.0

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.501961, 0.215686, 1)
texture = SubResource("GradientTexture2D_xqbj0")

[connection signal="body_entered" from="top_area" to="." method="_on_top_area_body_entered"]
[connection signal="body_exited" from="top_area" to="." method="_on_top_area_body_exited"]
[connection signal="body_entered" from="down_area" to="." method="_on_down_area_body_entered"]
[connection signal="body_exited" from="down_area" to="." method="_on_down_area_body_exited"]
[connection signal="body_entered" from="left_area" to="." method="_on_left_area_body_entered"]
[connection signal="body_exited" from="left_area" to="." method="_on_left_area_body_exited"]
[connection signal="body_entered" from="right_area" to="." method="_on_right_area_body_entered"]
[connection signal="body_exited" from="right_area" to="." method="_on_right_area_body_exited"]
